// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item list test Filtered 1`] = `
<div
  data-testid="discussion-selection-item-container"
>
  <div />
  <div
    data-testid="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span>item </span><span class=\\"highlight\\">2</span>",
        }
      }
      data-testid="content"
    />
    <div>
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Item list test NTI-6655: Open Bin Forums 1`] = `
<div
  data-testid="discussion-selection-item-container"
>
  <div />
  <div
    data-testid="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      data-testid="content"
    >
      Open Announcements
    </div>
    <div>
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
  <div
    data-testid="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      data-testid="content"
    >
      Open Discussions
    </div>
    <div>
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Item list test Simple list 1`] = `
<div
  data-testid="discussion-selection-item-container"
>
  <div />
  <div
    data-testid="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span class=\\"highlight\\">item</span><span> 1</span>",
        }
      }
      data-testid="content"
    />
    <div>
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
  <div
    data-testid="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span class=\\"highlight\\">item</span><span> 2</span>",
        }
      }
      data-testid="content"
    />
    <div>
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
  <div
    data-testid="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span class=\\"highlight\\">item</span><span> 3</span>",
        }
      }
      data-testid="content"
    />
    <div>
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
</div>
`;
